fix: allow codemirror tooltip overflow embedded NDV

--- a/packages/frontend/editor-ui/src/styles/plugins/_codemirror.scss
+++ b/packages/frontend/editor-ui/src/styles/plugins/_codemirror.scss
@@ -1,10 +1,15 @@
+#cm-tooltip-container {
+	position: relative;
+	z-index: var(--z-index-codemirror-tooltip);
+}
+
 .code-node-editor .cm-editor .cm-tooltip-autocomplete > ul[role='listbox'] {
 	border-bottom: none;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
 }
 
-.cm-editor .cm-tooltip-autocomplete {
+#cm-tooltip-container .cm-tooltip-autocomplete {
 	background-color: var(--color-background-xlight) !important;
 	box-shadow: var(--box-shadow-light);
 	border: none;
@@ -90,9 +95,9 @@
 	}
 }
 
-.cm-editor .cm-tooltip.cm-completionInfo,
-.cm-editor .cm-tooltip.cm-cursorInfo,
-.cm-editor .cm-tooltip-hover {
+#cm-tooltip-container .cm-tooltip.cm-completionInfo,
+#cm-tooltip-container .cm-tooltip.cm-cursorInfo,
+#cm-tooltip-container .cm-tooltip-hover {
 	// Add padding when infobox only contains text
 	&:not(:has(div)) {
 		padding: var(--spacing-xs);
@@ -293,7 +298,7 @@
 	}
 }
 
-.cm-editor .cm-tooltip.cm-completionInfo {
+#cm-tooltip-container .cm-tooltip.cm-completionInfo {
 	background-color: var(--color-background-xlight);
 	border: var(--border-base);
 	box-shadow: var(--box-shadow-light);
@@ -335,8 +340,8 @@
 	}
 }
 
-.cm-editor .cm-tooltip.cm-cursorInfo,
-.cm-editor .cm-tooltip-hover {
+#cm-tooltip-container .cm-tooltip.cm-cursorInfo,
+#cm-tooltip-container .cm-tooltip-hover {
 	background-color: var(--color-infobox-background);
 	border: var(--border-base);
 	box-shadow: var(--box-shadow-light);
